
Major Changes
-------------
* New :mod:`passlib.totp` module provides full support for TOTP & HOTP tokens
  on both client and server side. Contains both low-level primitives, and high-level
  helpers for persisting and tracking client state.

* New :mod:`passlib.pwd` module added to aid in password generation
  and strength measurement (with contributions from Thomas Waldmann).

* The :func:`~passlib.utils.pbkdf2.pbkdf2` function and all PBKDF2-based
  hashes have been sped up by ~20% compared to Passlib 1.6.

* Passlib will now detect and work around the fatal concurrency bug
  in py-bcrypt 0.2 and earlier (a :exc:`~passlib.exc.PasslibSecurityWarning`
  will also be issued). Nevertheless, users are *strongly* encouraged
  to upgrade to py-bcrypt 0.3 or another bcrypt library if you are using
  the :doc:`bcrypt </lib/passlib.hash.bcrypt>` hash.

Minor Changes
-------------
* The shared :class:`!PasswordHash` unittests now check all hash handlers for
  basic thread-safety (motivated by the pybcrypt 0.2 concurrency bug).

* The internal support module :mod:`passlib.utils.pbkdf2` has gained
  to new helpers: :func:`~passlib.utils.pbkdf2.get_hash_info`
  and :func:`~passlib.utils.pbkdf2.get_keyed_prf`.

Deprecations
------------
* The :func:`~passlib.utils.generate_secret` function has been deprecated
  in favor of the new :mod:`passlib.pwd` module, and will be removed
  in Passlib 2.0.

* :class:`passlib.utils.handlers.HasManyBackends` internal API change

  Applications implementing a custom handler with multiple backends
  should now provide :samp:`_load_backend_{name}` classmethod for each backend.
  This is simpler, more flexible, and more explicit than the
  previous (1.6 and earlier) API, which required a :samp:`_has_backend_{name}`
  class property and a :samp:`_calc_checksum_{name}` method. Support
  for the older API is deprecated, and will it be removed in Passlib 2.0.

Internal Changes
----------------